--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,11 +4,50 @@
 	bottom: 0;
 	min-height: 100%;
 	min-width: 100%;
-	width: auto;
+	width: 100%;
 	height: auto;
 	z-index: -1000;
 	background: url('../media/background.jpg') no-repeat;
 	background-size: cover;
+}
+
+.logo{
+	font-family: 'Wallpoet', cursive;
+	color: black;
+	font-size: 20px;
+	letter-spacing: 10px;
+}
+
+@keyframes vibra {
+  0% {margin-left: 0;}
+  25% {margin-left: 5px;}
+  50% {margin-left: 0;}
+  75% {margin-left: -5px;}
+  100% {margin-left: 0;}
+}
+
+@keyframes gira {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.efeitoGira:hover{
+	animation: gira 2s;
+	animation-iteration-count: 1; 
+}
+
+.efeitoVibra:hover{
+	animation: vibra 0.1s;
+  	animation-iteration-count: 3; 
+}
+
+.logo:hover{
+	color: black;
+}
+
+nav a li{
+	color: black;
 }
 
 @media only screen and (min-width: 200px) and (max-width: 500px){
