--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -90,12 +90,44 @@ nav a li{
 	background-color: white;
 }
 
-@media only screen and (min-width: 200px) and (max-width: 500px){
+#loading {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('http://i.imgur.com/zAD2y29.gif') 50% 50% no-repeat white;
+    
+}
+
+@media only screen and (min-width: 200px) and (max-width: 800px){
 	.bg_video{
 		display: none;
 	}
 
 	.bg_mobile{
-		background-color: blue;
+		background: url('../media/background.jpg') no-repeat;
+		position: fixed;
+		right: 0;
+		bottom: 0;
+		min-height: 100%;
+		min-width: 100%;
+		width: 100%;
+		height: auto;
+		z-index: -1000;
+		background-size: cover;
+	}
+
+	.logo:hover{
+		color: white;
+	}
+
+	.logo{
+		color: #FAFAFA;
+	}
+
+	nav a li{
+		color: #FAFAFA;
 	}
 }
