--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -131,3 +131,18 @@ nav a li{
 		color: #FAFAFA;
 	}
 }
+
+@media only screen and (min-width: 1200px){
+	.bg_video{
+		position: fixed;
+		right: 0;
+		bottom: 0;
+		min-height: 100%;
+		min-width: auto;
+		width: auto;
+		height: auto;
+		z-index: -1000;
+		background: url('../media/background.jpg') no-repeat;
+		background-size: cover;
+	}
+}
