--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,6 +26,28 @@
         width: 13rem;
     }
 
+    .header_area .main-menu .nav-item .nav-link{
+        font: normal 500 15px/2px var(--robotoMobile);
+    }
+
+    .site-main .about-area .about-title h2 > span{
+        font: normal bold 49px/ 60px var(--robotoMobile);
+    }
+
+    .site-main .brand-area .experience-area .years-area .years{
+        font: normal bold 84px/40px var(--robotoMobile);
+    }
+    
+    .site-main .brand-area .experience-area .years-area h2 > span{
+        font: normal 600 22px/30px var(--robotoMobile);
+    }
+    .site-main .project-area .grid .our-project > .title h4{
+        font: normal 700 25px/12px var(--robotoMobile);
+    }
+    .site-main .about-area .client .about-client h4{
+        font: normal 500 21px/ 20px var(--robotoMobile);
+    }
+
 }
 
 
@@ -51,7 +73,29 @@
     }
 
     .site-main .project-area .button-group button{
-        font: normal 500 18px/40px var(--roboto);
+        font: normal 500 18px/40px var(--robotoMobile);
+    }
+
+    .header_area .main-menu .nav-item .nav-link{
+        font: normal 500 15px/2px var(--robotoMobile);
+    }
+
+    .site-main .about-area .about-title h2 > span{
+        font: normal bold 49px/ 60px var(--robotoMobile);
+    }
+
+    .site-main .brand-area .experience-area .years-area .years{
+        font: normal bold 84px/40px var(--robotoMobile);
+    }
+    
+    .site-main .brand-area .experience-area .years-area h2 > span{
+        font: normal 600 22px/30px var(--robotoMobile);
+    }
+    .site-main .project-area .grid .our-project > .title h4{
+        font: normal 700 25px/12px var(--robotoMobile);
+    }
+    .site-main .about-area .client .about-client h4{
+        font: normal 500 21px/ 20px var(--robotoMobile);
     }
 
     .site-main .about-area .about-title p{
