--- a/css/partials/variables.css
+++ b/css/partials/variables.css
@@ -23,6 +23,6 @@ html, body{
    
 
     /* font family variables. */ 
-    --roboto: 'Roboto', cursive;
+    --roboto: 'Roboto', sans-serif;
     --robotoMobile: 'Roboto', normal;
 } 
